# viewmonk

./: .gitignore  ALL_CRUD_TABLE_FORMAT.md  CLEAR_CONNECTIONS.md  CODE_OF_CONDUCT.md  COMPLETE_CRUD_DEMO.md  CONNECTION_VALIDATION_ANALYSIS.md  CONSOLE_IMPROVEMENTS.md  CREATE_TABLE_SUCCESS_DISPLAY.md  DATA_EDITOR_IMPLEMENTED.md  DATA_IMPORT_FEATURES.md  DMG_BACKGROUND_GUIDE.md  DMG_INSTALL_INSTRUCTIONS.md  DMG_README.txt  ENTERPRISE_DASHBOARD_FEATURES.md  ENTERPRISE_FEATURES_COMPLETE.md  ENTERPRISE_IMPROVEMENT_PLAN.md  ENTERPRISE_PAGES_GUIDE.md  ENTERPRISE_SCHEMA_FILTERING_IMPLEMENTED.md  ENTERPRISE_USER_ISOLATION_STRATEGY.md  ER_DIAGRAM_IMPLEMENTED.md  FINAL_PERMISSION_IMPLEMENTATION.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_TRACKING.csv  INDEX_MANAGEMENT_IMPLEMENTED.md  MONKDB_PERMISSION_MODEL.md  Monthly_Report_Feb2026_MonkDB.xlsx  PERMISSION_AWARE_UI.md  PERMISSION_FIX_ENTERPRISE.md  PERMISSION_SYSTEM_IMPLEMENTED.md  QUICKSTART.md  README.md  REFRESH_ALL_FIX.md  SECURITY.md  SETUP.md  SUCCESS_MESSAGE_FIX.md  TESTING_REFRESH_ALL.md  USER_ISOLATION_EXPLAINED.md  USER_MANAGEMENT_IMPLEMENTED.md  VECTOR_OPERATIONS.md  build-standalone.sh  (+14 more)
app/: globals.css  layout.tsx
demo/: GEOSPATIAL-DEMO-GUIDE.md  TIME-SERIES-DEMO-GUIDE.md  geospatial-demo-setup.sql  geospatial-quick-queries.sql  geospatial-simple-setup.sql  quick-demo-queries.sql  timeseries-demo-setup.sql  timeseries-simple-setup.sql
docs/: CLIENT_PRESENTATION_GUIDE.md  ENTERPRISE_API_GUIDE.md  INDIA_AI_SUMMIT_2026_PRESENTATION.md  (+6 more)
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/audit/: logger.rs  mod.rs
src-tauri/src/blob/: mod.rs  security.rs
src-tauri/src/commands/: blob.rs  connection.rs  docker.rs  mod.rs  monitoring.rs  query.rs  saved_queries.rs  schema.rs  system.rs  table_designer.rs
src-tauri/src/db/: mod.rs  query_cache.rs  tabular.rs
src-tauri/src/docker/: client.rs  container.rs  mod.rs  models.rs
src-tauri/src/models/: blob.rs  connection.rs  mod.rs  query.rs  saved_query.rs  table_designer.rs
src-tauri/src/monitoring/: logger.rs  metrics.rs  mod.rs
src-tauri/src/security/: keychain.rs  mod.rs  validation.rs
src-tauri/src/state/: app_state.rs  mod.rs
src-tauri/src/updater/: mod.rs  update_checker.rs
src-tauri/src/utils/: error.rs  mod.rs
(+531 files in other folders)
